<resources>
    <string name="app_name">CurEx</string>
    <string name="app_version" translatable="false">App version</string>
    <string name="image" translatable="false">Image</string>
    <string name="something_went_wrong_try_again">Something went wrong. Please try again.</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="exit_app_warning">You are about to exit the app:</string>
    <string name="ok">OK</string>
    <string name="my_balances">My Balances</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="receive">Receive</string>
    <string name="sell">Sell</string>
    <string name="amount">amount</string>
    <string name="submit">Submit</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="history">History</string>
    <string name="please_select_selling_currency">Please select selling currency</string>
    <string name="selling_currency_not_available">The selected selling currency is not available for exchanges</string>
    <string name="please_select_receiving_currency">Please select receiving currency</string>
    <string name="receiving_currency_not_available">The selected receiving currency is not available for exchanges</string>
    <string name="selling_amount_must_be_more_than_zero">Selling amount must be more than zero</string>
    <string name="you_don_t_have_enough_balance_to_exchange">You don\'t have enough balance to exchange</string>
    <string name="you_don_t_have_enough_balance_for_amount_and_fees">You don\'t have enough balance to cover sell amount and fees</string>
    <string name="small_selling_amount">Selling amount must be more than 0.001</string>
    <string name="small_receiving_amount">Receiving amount must be more than 0.001</string>
    <string name="please_select_different_currencies">Please select different currencies</string>
    <string name="currency_converted">Currency converted</string>
    <string name="exchange_result">You have converted %1$s %2$s to %3$s %4$s. Commission Fee - %5$s %6$s.</string>
    <string name="transactions_history_for">Transactions history for %1$s</string>

</resources>