<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        android:text="@string/my_balances"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBalances"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet_e8def8"
        android:gravity="center_horizontal"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:text="@string/currency_exchange"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet_e8def8"
        android:orientation="horizontal"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="4dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sell"
                    android:textColorHint="@color/grey_500">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/etSellCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:maxLength="3"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/eur"
                        android:textColor="@color/grey_900"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/etSellAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/amount"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_swap_horizontal_black_32dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="4dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/receive"
                    android:textColorHint="@color/grey_500">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/etReceiveCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:maxLength="3"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/usd"
                        android:textColor="@color/grey_900"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/etReceiveAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/amount"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet_e8def8">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="28dp"
            android:text="@string/submit"
            android:textAllCaps="true" />

    </FrameLayout>

</LinearLayout>